[tool.poetry]
name = "lazy-hippo"
version = "0.2.2"
description = "Utility splitting video files by timestamp"
authors = ["Jesse Almanrode <jesse@almanrode.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lazy_hippo.py"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
colorama = "^0.4.6"

[tool.poetry.scripts]
lazy-hippo = "lazy_hippo:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
