[project]
name = "lazy-hippo"
version = "0.2.2"
description = "Utility splitting video files by timestamp"
authors = [{ name = "Jesse Almanrode", email = "jesse@almanrode.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "click>=8.1.3,<9",
    "colorama>=0.4.6,<0.5",
]

[project.scripts]
lazy-hippo = "lazy_hippo:cli"

[tool.hatch.build.targets.sdist]
include = ["lazy_hippo.py"]

[tool.hatch.build.targets.wheel]
include = ["lazy_hippo.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
